syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.socialnet";
option java_outer_classname = "SocialNetProto";
option objc_class_prefix = "SN";

package socialnet;

// The reversing string service definition.
service SocialNet {

  //Connect to server
  rpc Join (SendRequest) returns (stream Post) {}
  //Send new post
  rpc Send (SendRequest) returns (SendResponse) {}
  //Get list of posts
  rpc List (Empty) returns (GetListResponse) {}
  //Like post in feeds
  rpc LikePost (LikeRequest) returns (LikeResponse) {}
  //Comment post. Not working still
  rpc CommentPost (CommentRequest) returns (SendResponse) {}
}

message Empty {}

message SendRequest {
  string userName = 1;
  string message = 2;
}

message SendResponse {
  string postId = 1;
}

message GetListResponse {
  repeated Post postList = 1;
}

message Post {
  string postId = 1;
  string message = 2;
  string userName = 3;
  int32 likeAmount = 4;
  repeated Comment comments = 5;
}
message LikeRequest {
  string postId = 1;
  string userName = 2;
}

message LikeResponse {
  int32 likeAmount = 1;
}

message Comment {
  string userName = 1;
  string message = 2;
}

message CommentRequest {
  string postId = 1;
  string userName = 2;
  string message = 3;
}